--- a/src/index.html
+++ b/src/index.html
@@ -28,11 +28,11 @@
 
 <body>
     <!-- TOP NAVIGATION -->
-
+    <div class="nav"></div>
     <!-- HOME -->
-
+    <section class="home"></section>
     <!-- ABOUT -->
-
+    <section class="about"></section>
     <!-- FOOD MENU  -->
 
     <!-- TESTIMONIAL -->
