--- a/src/index.html
+++ b/src/index.html
@@ -30,9 +30,9 @@
     <!-- TOP NAVIGATION -->
     <div class="nav"></div>
     <!-- HOME -->
-
+    <section class="home"></section>
     <!-- ABOUT -->
-
+    <section class="about"></section>
     <!-- FOOD MENU  -->
 
     <!-- TESTIMONIAL -->
