--- a/src/index.html
+++ b/src/index.html
@@ -38,7 +38,7 @@
     <!-- TESTIMONIAL -->
 
     <!-- FOOTER  -->
-
+    <footer></footer>
     <!-- BOOTSTRAP -->
     <script src="./js/jquery.min.js"></script>
     <script src="./js/popper.min.js"></script>
