--- a/src/index.html
+++ b/src/index.html
@@ -28,17 +28,17 @@
 
 <body>
     <!-- TOP NAVIGATION -->
-
+    <nav></nav>
     <!-- HOME -->
-
+    <nav></nav>
     <!-- ABOUT -->
-
+    <nav></nav>
     <!-- FOOD MENU  -->
-
+    <nav></nav>
     <!-- TESTIMONIAL -->
-
+    <nav></nav>
     <!-- FOOTER  -->
-
+    <nav></nav>
     <!-- BOOTSTRAP -->
     <script src="./js/jquery.min.js"></script>
     <script src="./js/popper.min.js"></script>
