--- a/src/index.html
+++ b/src/index.html
@@ -37,7 +37,7 @@
     <section class="intro"></section>
     <!-- FOOD MENU  -->
     <section id="food-menu"></section>
-    <!-- TESTIMONIAL -->
+    <!-- FEED BACK -->
     <section id="feedback"></section>
     <!-- FOOTER  -->
     <footer></footer>
