--- a/src/index2.html
+++ b/src/index2.html
@@ -29,16 +29,29 @@
 <body>
     <!-- HEADER -->
     <header>
-        <nav class="nav"></nav>
+        <div class="nav">
+            <a class="logo" href="">Freshfood</a>
+            <div class="main__menu">
+                <ul>
+                    <li>
+                        <a href=""></a>
+                        <a href=""></a>
+                        <a href=""></a>
+                        <a href=""></a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+
     </header>
-    <!-- COVER -->
+    <!-- HOME -->
     <section class="cover"></section>
-    <!-- INTRO -->
+    <!-- ABOUT -->
     <section class="intro"></section>
     <!-- FOOD MENU  -->
-    <section id="food-menu"></section>
-    <!-- TESTIMONIAL -->
-    <section id="feedback"></section>
+    
+    <!-- TESTIMONIALS -->
+    
     <!-- FOOTER  -->
     <footer></footer>
     <!-- BOOTSTRAP -->
