--- a/src/index2.html
+++ b/src/index2.html
@@ -17,7 +17,7 @@
         rel="stylesheet">
 
     <!-- BOXICONS  -->
-    <link rel="stylesheet" href="./css/boxicons.css">
+    <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
     <!-- BOOTSTRAP -->
     <link rel="stylesheet" href="./css/bootstrap.css">
 
@@ -28,19 +28,20 @@
 
 <body>
     <!-- HEADER -->
-    <header>
-        <div class="nav">
+    <header class="header">
+        <div class="container">
             <a class="logo" href="">Freshfood</a>
             <div class="main__menu">
                 <ul>
                     <li>
-                        <a href=""></a>
-                        <a href=""></a>
-                        <a href=""></a>
-                        <a href=""></a>
+                        <a href="">Home</a>
+                        <a href="">About</a>
+                        <a href="">Menu</a>
+                        <a href="">Testimonials</a>
                     </li>
                 </ul>
             </div>
+            <div class="nav__icon"><i class='bx bx-cart-alt'></i></div>
         </div>
 
     </header>
@@ -49,9 +50,9 @@
     <!-- ABOUT -->
     <section class="intro"></section>
     <!-- FOOD MENU  -->
-    
+
     <!-- TESTIMONIALS -->
-    
+
     <!-- FOOTER  -->
     <footer></footer>
     <!-- BOOTSTRAP -->
