--- a/src/index2.html
+++ b/src/index2.html
@@ -34,14 +34,14 @@
             <div class="main__menu">
                 <ul>
                     <li>
-                        <a href="">Home</a>
+                        <a class="active" href="">Home</a>
                         <a href="">About</a>
                         <a href="">Menu</a>
                         <a href="">Testimonials</a>
                     </li>
                 </ul>
             </div>
-            <div class="nav__icon"><i class='bx bx-cart-alt'></i></div>
+            <div class="header__cart"><i class='bx bx-cart-alt'></i></div>
         </div>
 
     </header>
