--- a/src/index.html
+++ b/src/index.html
@@ -15,9 +15,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800;900&display=swap"
         rel="stylesheet">
-
     <!-- BOXICONS  -->
-    <link rel="stylesheet" href="./css/boxicons.css">
+    <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
     <!-- BOOTSTRAP -->
     <link rel="stylesheet" href="./css/bootstrap.css">
 
@@ -31,14 +30,120 @@
     <header>
         <nav class="nav"></nav>
     </header>
-    <!-- COVER -->
-    <section class="cover"></section>
-    <!-- INTRO -->
-    <section class="intro"></section>
+    <!-- HOME -->
+    <section class="home"></section>
+    <!-- ABOUT -->
+    <section class="about"></section>
     <!-- FOOD MENU  -->
-    <section id="food-menu"></section>
-    <!-- FEED BACK -->
-    <section id="feedback"></section>
+    <section class="bg-img" id="menu" style="background-image: url(./assets/katherine-chase-4MMK78S7eyk-unsplash.jpg)">
+        <div class="container">
+            <div class="food-menu">
+                <h1 class="food-menu__content">What will <span>you</span> eat today?</h1>
+                <p class="food-menu__title">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam molestiae provident in amet
+                    atque, totam eveniet suscipit quasi distinctio earum aut dolorem omnis quam, rerum exercitationem
+                    nam ex cupiditate excepturi!
+                </p>
+                <div class="food-menu__category">
+                    <div>
+                        <button class="active">
+                            All food
+                        </button>
+                    </div>
+                    <div>
+                        <button>
+                            Salad
+                        </button>
+                    </div>
+                    <div>
+                        <button>
+                            Lorem
+                        </button>
+                    </div>
+                    <div>
+                        <button>
+                            Ipsum
+                        </button>
+                    </div>
+                    <div>
+                        <button>
+                            Dolor
+                        </button>
+                    </div>
+                </div>
+                <div class="food-menu__wrap">
+                    <div class="row">
+                        <div class="col-3">
+                            <div class="food-menu__wrap--item salad-type">
+                                <div class="food-menu__wrap--img">
+                                    <img class="wrap__img--hover" src="./assets/anh-nguyen-kcA-c3f_3FE-unsplash.jpg" alt="">
+                                </div>
+                                <div class="food-menu__wrap--info">
+                                    <div class="food-menu__wrap--text">
+                                        <h3>Lorem ipsum</h3>
+                                        <p>120$</p>
+                                    </div>
+                                    <div class="food-menu__wrap--cart">
+                                        <i class="bx bx-cart-alt"></i>
+                                    </div>
+                                  
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-3">
+                            <div class="food-menu__wrap--item lorem-type">
+                                <div class="food-menu__wrap--img">
+                                    <img src="./assets/s" alt="">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-3">
+                            <div class="food-menu__wrap--item ipsum-type">
+                                <div class="food-menu__wrap--img">
+
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-3">
+                            <div class="food-menu__wrap--item lorem-type">
+                                <div class="food-menu__wrap--img">
+
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-3">
+                            <div class="food-menu__wrap--item dolor-type">
+                                <div class="food-menu__wrap--img">
+
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-3">
+                            <div class="food-menu__wrap--item salad-type">
+                                <div class="food-menu__wrap--img">
+
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-3">
+                            <div class="food-menu__wrap--item lorem-type">
+                                <div class="food-menu__wrap--img">
+
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-3 food-menu__wrap--item dolor-type">
+                            <div class="food-menu__wrap--img">
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- TESTIMONIALS -->
+    <section id="Testimonial"></section>
     <!-- FOOTER  -->
     <footer></footer>
     <!-- BOOTSTRAP -->
