--- a/src/index2.html
+++ b/src/index2.html
@@ -45,7 +45,8 @@
         </div>
     </header>
     <!-- HOME -->
-    <section class="home">
+    <section class="home" style="background-image: url(./assets/brooke-lark-08bOYnH_r_E-unsplash.jpg);height:  600px;
+    background-size:cover;">
         <div class="container">
             <div class="row">
                 <div class="col-6">
@@ -56,7 +57,7 @@
                     <button class="home__button">Order now</button>
                 </div>
                 <div class="col-6">
-                    A
+                    
                 </div>
             </div>
             
