--- a/src/index2.html
+++ b/src/index2.html
@@ -32,10 +32,10 @@
         <a class="header__logo" href="">Freshfood</a>
 
         <ul class="header__menu">
-            <li class="header__menu--link"><a href="#">Home</a></li>
-            <li class="header__menu--link"><a href="#">About</a></li>
-            <li class="header__menu--link"><a href="#">Menu</a< /li>
-            <li class="header__menu--link"><a href="#">Testimonials</a></li>
+            <li class="header__menu--item"><a class="header__menu--link" href="#">Home</a></li>
+            <li class="header__menu--item"><a class="header__menu--link" href="#">About</a></li>
+            <li class="header__menu--item"><a class="header__menu--link" href="#">Menu</a></li>
+            <li class="header__menu--item"><a class="header__menu--link" href="#">Testimonials</a></li>
 
         </ul>
         </div>
