--- a/src/index2.html
+++ b/src/index2.html
@@ -67,7 +67,18 @@
 
     </section>
     <!-- ABOUT -->
-    <section class="intro"></section>
+    <section class="about">
+        <div class="about__image">
+            <img class="about__img" src="./assets/dan-gold-4_jhDO54BYg-unsplash.jpg" alt="about"
+                style="border-radius: 1.3rem;">
+        </div>
+        <div class="about__content">
+            <h2 class="about__content--title"><span class="about__tittle--color">We</span> create <span
+                    class="about__tittle--color">delicious</span> memories for <span
+                    class="about__tittle--color">you</span> </h2>
+            <div class="about__content--text"></div>
+        </div>
+    </section>
     <!-- FOOD MENU  -->
 
     <!-- TESTIMONIALS -->
