--- a/src/index2.html
+++ b/src/index2.html
@@ -76,7 +76,9 @@
             <h2 class="about__content--title"><span class="about__tittle--color">We</span> create <span
                     class="about__tittle--color">delicious</span> memories for <span
                     class="about__tittle--color">you</span> </h2>
-            <div class="about__content--text"></div>
+            <div class="about__content--text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni mollitia
+                ipsa nemo possimus soluta est accusamus eum exercitationem nisi adipisci, pariatur, explicabo dolore,
+                reprehenderit esse fugiat sapiente eos veniam quae.</div>
         </div>
     </section>
     <!-- FOOD MENU  -->
