--- a/src/index2.html
+++ b/src/index2.html
@@ -29,27 +29,23 @@
 <body>
     <!-- HEADER -->
     <header class="header">
-        <a class="header__logo" href="">Freshfood</a>
-
-        <ul class="header__menu">
-            <li class="header__menu--item"><a class="header__menu--link" href="#">Home</a></li>
-            <li class="header__menu--item"><a class="header__menu--link" href="#">About</a></li>
-            <li class="header__menu--item"><a class="header__menu--link" href="#">Menu</a></li>
-            <li class="header__menu--item"><a class="header__menu--link" href="#">Testimonials</a></li>
-
-        </ul>
-        </div>
-
-        <div class="header__cart"><i class='bx bx-cart-alt'></i></div>
-        </div>
-
+        <div class="container">
+            <a class="header__logo" href="">Freshfood</a>
+            <ul class="header__menu">
+                <li class="header__menu--item active"><a class="header__menu--link" href="#home">Home</a></li>
+                <li class="header__menu--item"><a class="header__menu--link" href="#about">About</a></li>
+                <li class="header__menu--item"><a class="header__menu--link" href="#">Menu</a></li>
+                <li class="header__menu--item"><a class="header__menu--link" href="#">Testimonials</a></li>
+            </ul>
+            
+            <div class="header__cart"><i class='bx bx-cart-alt'></i> </div>
+        </div>   
     </header>
     <!-- HOME -->
-    <section class="home" style="background-image: url(./assets/brooke-lark-08bOYnH_r_E-unsplash.jpg);height:  750px;
-    background-size:cover;">
+    <section class="home bg-img bg-fix" style="background-image: url(./assets/brooke-lark-08bOYnH_r_E-unsplash.jpg)" id="home">
         <div class="container">
             <div class="row">
-                <div class="col-7">
+                <div class="col-7 home__title">
                     <h1 class="home__text">Fresh Food</h1>
                     <div class="home__content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio ducimus
                         nisi quo
@@ -67,7 +63,7 @@
 
     </section>
     <!-- ABOUT -->
-    <section class="about">
+    <section class="about" id="about">
         <div class="about__image">
             <img class="about__img" src="./assets/dan-gold-4_jhDO54BYg-unsplash.jpg" alt="about"
                 style="border-radius: 1.3rem;">
