--- a/src/index.html
+++ b/src/index.html
@@ -53,15 +53,17 @@
         <div class="container">
             <div class="row">
                 <div class="col-7 home__title">
-                    <div data-aos="fade-right">
-                        <h1 class="home__text">Fresh Food</h1>
-                        <div class="home__content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio ducimus
+                    <div>
+                        <h1 class="home__text" data-aos="fade-right"  data-aos-delay="100">Fresh Food</h1>
+                        <div class="home__content" data-aos="fade-right"  data-aos-delay="300">Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio ducimus
                             nisi quo
                             officia repellendus eos. Consectetur repellat fugit tempora velit dignissimos, nam ut,
                             officia
                             ullam saepe
                             ducimus exercitationem voluptas incidunt!</div>
-                        <button class="home__button">Order now</button>
+                       <div data-aos="fade-right" data-aos-delay="500"> 
+                           <button class="home__button" >Order now</button>
+                    </div>
                     </div>
                 </div>
                 <div class="col-5">
@@ -434,7 +436,6 @@
             easing: 'ease-out-sine',
             mirror: true,
         });
-
     </script>
 
     <!-- MAIN JS  -->
