--- a/src/index.html
+++ b/src/index.html
@@ -74,13 +74,13 @@
         </div>
 
     </section>
-    <!-- ABOUT -->
+    <!-- ABOUT CHUA ANIMATION--> 
     <section class="about" id="about">
-        <div class="about__image" data-aos="fade-right">
+        <div class="about__image">
             <img class="about__img" src="./assets/dan-gold-4_jhDO54BYg-unsplash.jpg" alt="about"
                 style="border-radius: 1.3rem;">
         </div>
-        <div class="about__content" data-aos="fade-left">
+        <div class="about__content">
             <h2 class="about__content--title"><span class="about__tittle--color">We</span> create <span
                     class="about__tittle--color">delicious</span> memories for <span
                     class="about__tittle--color">you</span>
@@ -130,7 +130,7 @@
                 </div>
                 <div class="food-menu__wrap">
                     <div class="row">
-                        <div class="col-3 mt-4 mix salad" data-aos="fade-up" data-aos-delay="100">
+                        <div class="col-3 mt-4 mix salad animate__animated animate__fadeInUp delay-1" >
                             <div class="food-menu__wrap--item salad-type">
                                 <div class="food-menu__wrap--img">
                                     <div class="wrap__img--hover">
@@ -149,7 +149,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-3 mt-4 mix lorem " data-aos="fade-up" data-aos-delay="300">
+                        <div class="col-3 mt-4 mix lorem animate__animated animate__fadeInUp delay-2" >
                             <div class="food-menu__wrap--item lorem-type ">
                                 <div class="food-menu__wrap--img">
                                     <div class="wrap__img--hover ">
@@ -167,7 +167,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-3 mt-4 mix ipsum" data-aos="fade-up" data-aos-delay="500">
+                        <div class="col-3 mt-4 mix ipsum animate__animated animate__fadeInUp delay-3" >
                             <div class="food-menu__wrap--item ipsum-type">
                                 <div class="food-menu__wrap--img ">
                                     <div class="wrap__img--hover bg-img-ipsum ">
@@ -185,7 +185,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-3 mt-4 mix lorem" data-aos="fade-up" data-aos-delay="700">
+                        <div class="col-3 mt-4 mix lorem animate__animated animate__fadeInUp delay-4" >
                             <div class="food-menu__wrap--item lorem-type">
                                 <div class="food-menu__wrap--img">
                                     <div class="wrap__img--hover ">
@@ -203,7 +203,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-3 mt-4 mix dolor" data-aos="fade-up" data-aos-delay="100">
+                        <div class="col-3 mt-4 mix dolor animate__animated animate__fadeInUp delay-5" >
                             <div class="food-menu__wrap--item dolor-type">
                                 <div class="food-menu__wrap--img ">
                                     <div class="wrap__img--hover bg-img-dolor ">
@@ -221,7 +221,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-3 mt-4  mix salad" data-aos="fade-up" data-aos-delay="300">
+                        <div class="col-3 mt-4  mix salad animate__animated animate__fadeInUp delay-6" >
                             <div class="food-menu__wrap--item salad-type">
                                 <div class="food-menu__wrap--img">
                                     <div class="wrap__img--hover">
@@ -239,7 +239,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-3 mt-4 mix ipsum" data-aos="fade-up" data-aos-delay="500">
+                        <div class="col-3 mt-4 mix ipsum animate__animated animate__fadeInUp delay-7">
                             <div class="food-menu__wrap--item ipsum-type">
                                 <div class="food-menu__wrap--img">
                                     <div class="wrap__img--hover bg-img-ipsum">
@@ -257,7 +257,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-3 mt-4 mix dolor" data-aos="fade-up" data-aos-delay="700">
+                        <div class="col-3 mt-4 mix dolor animate__animated animate__fadeInUp delay-8" >
                             <div class="food-menu__wrap--item dolor-type">
                                 <div class="food-menu__wrap--img">
                                     <div class="wrap__img--hover bg-img-dolor">
