--- a/src/index2.html
+++ b/src/index2.html
@@ -31,7 +31,7 @@
     <header class="header">
         <div class="container">
             <a class="header__logo" href="">Freshfood</a>
-            <ul class="header__menu">
+            <ul class="header__menu menu__res">
                 <li class="header__menu--item active"><a class="header__menu--link" href="#home">Home</a></li>
                 <li class="header__menu--item"><a class="header__menu--link" href="#about">About</a></li>
                 <li class="header__menu--item"><a class="header__menu--link" href="#">Menu</a></li>
@@ -45,7 +45,7 @@
     <section class="home bg-img bg-fix" style="background-image: url(./assets/brooke-lark-08bOYnH_r_E-unsplash.jpg)" id="home">
         <div class="container">
             <div class="row">
-                <div class="col-7 home__title">
+                <div class="col-6 home__title">
                     <h1 class="home__text">Fresh Food</h1>
                     <div class="home__content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio ducimus
                         nisi quo
@@ -54,7 +54,7 @@
                         ducimus exercitationem voluptas incidunt!</div>
                     <button class="home__button">Order now</button>
                 </div>
-                <div class="col-5">
+                <div class="col-6">
 
                 </div>
             </div>
@@ -64,18 +64,23 @@
     </section>
     <!-- ABOUT -->
     <section class="about" id="about">
-        <div class="about__image">
-            <img class="about__img" src="./assets/dan-gold-4_jhDO54BYg-unsplash.jpg" alt="about"
-                style="border-radius: 1.3rem;">
+        <div class="container">
+            <div class="row">
+                <div class="about__image col-5">
+                    <img class="about__img" src="./assets/dan-gold-4_jhDO54BYg-unsplash.jpg" alt="about" style="border-radius: 1.3rem;">
+                </div>
+                <div class="about__content col-7">
+                    <h2 class="about__content--title"><span class="about__tittle--color">We</span> create <span
+                            class="about__tittle--color">delicious</span> memories for <span class="about__tittle--color">you</span>
+                    </h2>
+                    <div class="about__content--text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni mollitia
+                        ipsa nemo possimus soluta est accusamus eum exercitationem nisi adipisci, pariatur, explicabo dolore,
+                        reprehenderit esse fugiat sapiente eos veniam quae.</div>
+                </div>
+            </div>
+           
         </div>
-        <div class="about__content">
-            <h2 class="about__content--title"><span class="about__tittle--color">We</span> create <span
-                    class="about__tittle--color">delicious</span> memories for <span
-                    class="about__tittle--color">you</span> </h2>
-            <div class="about__content--text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni mollitia
-                ipsa nemo possimus soluta est accusamus eum exercitationem nisi adipisci, pariatur, explicabo dolore,
-                reprehenderit esse fugiat sapiente eos veniam quae.</div>
-        </div>
+        
     </section>
     <!-- FOOD MENU  -->
 
