--- a/src/index2.html
+++ b/src/index2.html
@@ -45,7 +45,7 @@
     <section class="home bg-img bg-fix" style="background-image: url(./assets/brooke-lark-08bOYnH_r_E-unsplash.jpg)" id="home">
         <div class="container">
             <div class="row">
-                <div class="col-6 home__title">
+                <div class="home__title col-6 ">
                     <h1 class="home__text">Fresh Food</h1>
                     <div class="home__content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio ducimus
                         nisi quo
@@ -55,12 +55,9 @@
                     <button class="home__button">Order now</button>
                 </div>
                 <div class="col-6">
-
                 </div>
             </div>
-
         </div>
-
     </section>
     <!-- ABOUT -->
     <section class="about" id="about">
