--- a/src/index2.html
+++ b/src/index2.html
@@ -31,13 +31,12 @@
     <header class="header">
         <div class="container">
             <a class="header__logo" href="">Freshfood</a>
-            <ul class="header__menu menu__res">
+            <ul class="header__menu ">
                 <li class="header__menu--item active"><a class="header__menu--link" href="#home">Home</a></li>
                 <li class="header__menu--item"><a class="header__menu--link" href="#about">About</a></li>
-                <li class="header__menu--item"><a class="header__menu--link" href="#">Menu</a></li>
-                <li class="header__menu--item"><a class="header__menu--link" href="#">Testimonials</a></li>
-            </ul>
-            
+                <li class="header__menu--item"><a class="header__menu--link" href="#menu">Menu</a></li>
+                <li class="header__menu--item"><a class="header__menu--link" href="#testimonials">Testimonials</a></li>
+            </ul>   
             <div class="header__cart"><i class='bx bx-cart-alt'></i> </div>
         </div>   
     </header>
@@ -45,7 +44,7 @@
     <section class="home bg-img bg-fix" style="background-image: url(./assets/brooke-lark-08bOYnH_r_E-unsplash.jpg)" id="home">
         <div class="container">
             <div class="row">
-                <div class="home__title col-6 ">
+                <div class="home__title col-sm-12  ">
                     <h1 class="home__text">Fresh Food</h1>
                     <div class="home__content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio ducimus
                         nisi quo
@@ -62,11 +61,11 @@
     <!-- ABOUT -->
     <section class="about" id="about">
         <div class="container">
-            <div class="row">
-                <div class="about__image col-5">
+            <div class="row ">
+                <div class="about__image col-xxl-5  col-sm-7 col-xs-12">
                     <img class="about__img" src="./assets/dan-gold-4_jhDO54BYg-unsplash.jpg" alt="about" style="border-radius: 1.3rem;">
                 </div>
-                <div class="about__content col-7">
+                <div class="about__content col-xxl-7 col-sm-5 col-xs-0">
                     <h2 class="about__content--title"><span class="about__tittle--color">We</span> create <span
                             class="about__tittle--color">delicious</span> memories for <span class="about__tittle--color">you</span>
                     </h2>
