--- a/src/index2.html
+++ b/src/index2.html
@@ -36,15 +36,16 @@
                 <li class="header__menu--item"><a class="header__menu--link" href="#about">About</a></li>
                 <li class="header__menu--item"><a class="header__menu--link" href="#menu">Menu</a></li>
                 <li class="header__menu--item"><a class="header__menu--link" href="#testimonials">Testimonials</a></li>
-            </ul>   
+            </ul>
             <div class="header__cart"><i class='bx bx-cart-alt'></i> </div>
-        </div>   
+        </div>
     </header>
     <!-- HOME -->
-    <section class="home bg-img bg-fix" style="background-image: url(./assets/brooke-lark-08bOYnH_r_E-unsplash.jpg)" id="home">
+    <section class="home bg-img bg-fix" style="background-image: url(./assets/brooke-lark-08bOYnH_r_E-unsplash.jpg)"
+        id="home">
         <div class="container">
             <div class="row">
-                <div class="home__title col-sm-12  ">
+                <div class="home__title col-6  col-xs-12">
                     <h1 class="home__text">Fresh Food</h1>
                     <div class="home__content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio ducimus
                         nisi quo
@@ -53,8 +54,7 @@
                         ducimus exercitationem voluptas incidunt!</div>
                     <button class="home__button">Order now</button>
                 </div>
-                <div class="col-6">
-                </div>
+
             </div>
         </div>
     </section>
@@ -62,21 +62,32 @@
     <section class="about" id="about">
         <div class="container">
             <div class="row ">
-                <div class="about__image col-xxl-5  col-sm-7 col-xs-12">
-                    <img class="about__img" src="./assets/dan-gold-4_jhDO54BYg-unsplash.jpg" alt="about" style="border-radius: 1.3rem;">
+                <div class="col-xl-5 col-lg-7 col-md-6 col-xs-12 ">
+                    <div class="about__image ">
+                        <img class="about__img" src="./assets/dan-gold-4_jhDO54BYg-unsplash.jpg" alt="about"
+                            style="border-radius: 1.3rem;">
+                    </div>
                 </div>
-                <div class="about__content col-xxl-7 col-sm-5 col-xs-0">
-                    <h2 class="about__content--title"><span class="about__tittle--color">We</span> create <span
-                            class="about__tittle--color">delicious</span> memories for <span class="about__tittle--color">you</span>
-                    </h2>
-                    <div class="about__content--text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni mollitia
-                        ipsa nemo possimus soluta est accusamus eum exercitationem nisi adipisci, pariatur, explicabo dolore,
-                        reprehenderit esse fugiat sapiente eos veniam quae.</div>
+
+                <div class="col-xl-7 col-lg-5 col-md-6 col-xs-12 about__wrap">
+                    <div class="about__content">
+                        <h2 class="about__content--title"><span class="about__tittle--color">We</span> create <span
+                                class="about__tittle--color">delicious</span> memories for <span
+                                class="about__tittle--color">you</span>
+                        </h2>
+                        <div class="about__content--text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni
+                            mollitia
+                            ipsa nemo possimus soluta est accusamus eum exercitationem nisi adipisci, pariatur,
+                            explicabo
+                            dolore,
+                            reprehenderit esse fugiat sapiente eos veniam quae.</div>
+                    </div>
                 </div>
+
             </div>
-           
+
         </div>
-        
+
     </section>
     <!-- FOOD MENU  -->
 
